2014-06-21 : Bug fixed with course migration where accept anything setting was not being passed to recreated assignment
2014-06-21 : Bug fixed where Grademark null grades were overwriting grades previously set in Moodle in the Plagiarism plugin.
2014-06-21 : Gradebook now updates when post date is changed on the inbox screen.
2014-06-21 : Error message now shown if ajax request to get submissions times out
2014-06-21 : Bug fixed where instructors can not access Turnitin Messages Inbox
2014-06-21 : Forum posts are now submitted to Turnitin when posted
2014-06-21 : Code changes as required by Moodlerooms to better fit Moodle guidelines
2014-06-21 : Peermark Manager now accessible to any instructor in PP
2014-06-21 : Extra permission checks added for migration tool
2014-06-21 : Improved CSS to scope only to plugins and files added to jQuery plugin organisation
2014-06-21 : User creation removed from restore procedure
2014-06-21 : Additonal indexes added to database tables
2014-06-21 : Bug fixed where user could submit without accepting Moodle disclaimer
2014-06-21 : Postgres bug fixed when searching unlinked users table
2014-06-21 : Bug fixed where a grade set to 0 in GradeMark was showing as — in Turnitin Assignment
2014-06-21 : Course reset functionality added to remove Turnitin data when a class/module is reset.
2014-06-21 : Config warning added if plugin has not been configured.
2014-06-21 : Removed restriction in PP to allow submissions after the due date.
2014-06-21 : Removed restriction on word count and content length if accepting any file type
2014-06-21 : Ability added to enable/disable Turnitin in individual modules.
2014-06-21 : Anonymous marking option is locked once a submission is made to any assignment part
2014-06-21 : Automatic connection test and upgrade check in settings stopped and changed to buttons
2014-06-21 : Bug fixed where new files with same filename displaying correct OR link